--- a/resource-timing/resources/blank_page_green.htm
+++ b/resource-timing/resources/blank_page_green.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+        <meta charset="utf-8" >
         <title>Green Test Page</title>
     </head>
     <body style="background-color:#00FF00;">
