--- a/html/semantics/forms/the-input-element/url.html
+++ b/html/semantics/forms/the-input-element/url.html
@@ -9,57 +9,45 @@
 </head>
 <body>
 	<h1>Input url</h1>
-	<input type="url" id="novalue" />
-	<input type="url" id="value_with_LF" value="a&#x000A;a" />
-	<input type="url" id="value_with_CR" value="a&#x000D;a" />
-	<input type="url" id="value_with_CRLF" value="a&#x000A;&#x000D;a" />
+	<div style="display: none">
+	<input type="url" id="type_support" />
+	<input type="url" id="user_input_LF" />
+	<input type="url" id="user_input_CR" />
+	<input type="url" id="user_input_CRLF" />
+	<input type="url" id="value_with_CRLF" value="a&#x000D;&#x000A;a" />
 	<input type="url" id="value_with_leading_trailing_white_space" value=" aa " />
 	<input type="url" id="value_with_leading_trailing_inner_white_space" value=" a a " />
+	</div>
 	<div id="log">
 	</div>
 
 	<script type="text/javascript">
-		var element = document.getElementById('novalue');
 		test(function(){
+			var element = document.getElementById('type_support');
 			assert_equals(element.type, 'url');
 		}, 'url type supported on input element');
+
 		test(function(){
+			var element = document.getElementById('user_input_LF');
 			element.value = 'a\u000Aa';
 			assert_equals(element.value, 'aa');
-		}, 'User agents must not allow users to insert "LF" (U+000A)');
-		test(function(){
+
+			element = document.getElementById('user_input_CR');
 			element.value = 'a\u000Da';
 			assert_equals(element.value, 'aa');
-		}, 'User agents must not allow users to insert "CR" (U+000D)');
 
-		element = document.getElementById('value_with_LF');
-		test(function(){
-			assert_equals(element.value, 'aa');
-		}, 'The value attribute, if specified, must have a value that contains no "LF" (U+000A)');
-
-		element = document.getElementById('value_with_CR');
-		test(function(){
-			assert_equals(element.value, 'aa');
-		}, 'The value attribute, if specified, must have a value that contains no "CR" (U+000D)');
-
-		test(function(){
-			element = document.getElementById('novalue');			
+			element = document.getElementById('user_input_CRLF');
 			element.value = 'a\u000D\u000Aa';
 			assert_equals(element.value, 'aa');
+		}, 'User agents must not allow users to insert "LF" (U+000A) or "CR" (U+000D)');
 
-			element = document.getElementById('value_with_CRLF');
+		test(function(){
+			var element = document.getElementById('value_with_CRLF');
 			assert_equals(element.value, 'aa');
 		}, 'The value sanitization algorithm is as follows: Strip line breaks from the value');
 
 		test(function(){
-			element = document.getElementById('novalue');
-			element.value = ' aa ';
-			assert_equals(element.value, 'aa');
-
-			element.value = ' a a ';
-			assert_equals(element.value, 'a a');
-
-			element = document.getElementById('value_with_leading_trailing_white_space');
+			var element = document.getElementById('value_with_leading_trailing_white_space');
 			assert_equals(element.value, 'aa');
 
 			element = document.getElementById('value_with_leading_trailing_inner_white_space');
