--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-circle-003.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-circle-003.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="flags" content="dom">
-    <meta name="assert" content="shape-outside declaration is invalid if circle shape function has an invalid cy param">
+    <meta name="assert" content="shape-outside declaration is invalid if circle shape function has an invalid cx param">
 	<title>CSS Shapes Test: Circle - invalid cx value</title>
 	<link rel="author" title="Sherlock Zhong" href="mailto:sherlock.z0917@gmail.com">
+	<link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
 	<script src="/resources/testharness.js"></script>
 	<script src="/resources/testharnessreport.js"></script>
 	<link rel="stylesheet" href="/resources/testharness.css">
