--- a/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background.html
+++ b/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background.html
@@ -19,7 +19,7 @@
         font-size: 25px;
         line-height: 20px;
       }
-      .multiply {mix-blend-mode: multiply;}
+      /*.multiply {mix-blend-mode: multiply;}
       .screen {mix-blend-mode: screen;}
       .overlay {mix-blend-mode: overlay;}
       .darken {mix-blend-mode: darken;}
@@ -30,12 +30,12 @@
       .hard-light {mix-blend-mode: hard-light;}
       .soft-light {mix-blend-mode: soft-light;}
       .difference {mix-blend-mode: difference;}
-      .exclusion {mix-blend-mode: exclusion;}
+      .exclusion {mix-blend-mode: exclusion;}*/
     </style>
     <style id="insert" type="text/css"></style>
 </head>
 <body>
-    <svg class="svg">
+    <!-- <svg class="svg">
         <text class="multiply" x="10" y="20">mix-blend-mode: multiply;</text>
     </svg>
     <svg class="svg">
@@ -67,36 +67,37 @@
     </svg>
     <svg class="svg">
         <text class="exclusion" x="10" y="20">mix-blend-mode: exclusion;</text>
-    </svg>
+    </svg> -->
     <!-- <div id="log"></div>   -->
 </body>
 <script>
-// var modes = [
-//         'multiply', 'screen', 'overlay', 'darken', 'lighten', 'color-dodge', 
-//         'color-burn', 'hard-light', 'soft-light', 'difference', 'exclusion'
-//     ];
-// var mode;
-// var i = 0;
-// var flagment = document.createDocumentFragment();
-// var style = '';
+var SVG_NS = 'http://www.w3.org/2000/svg';
+var modes = [
+        'multiply', 'screen', 'overlay', 'darken', 'lighten', 'color-dodge', 
+        'color-burn', 'hard-light', 'soft-light', 'difference', 'exclusion'
+    ];
+var mode;
+var i = 0;
+var flagment = document.createDocumentFragment();
+var style = '';
 
-// while(mode = modes[i++]) {
-//     var svg = document.createElement('svg');
-//     var text = document.createElement('text');
+while(mode = modes[i++]) {
+    var svg = document.createElementNS(SVG_NS, 'svg');
+    var text = document.createElementNS(SVG_NS, 'text');
 
-//     svg.setAttribute('class', 'svg');
-//     text.setAttribute('x', 10);
-//     text.setAttribute('y', 20);
-//     text.setAttribute('class', mode);
-//     text.innerText = 'mix-blend-mode: ' + mode + ';';
+    svg.setAttribute('class', 'svg');
+    text.setAttribute('x', 10);
+    text.setAttribute('y', 20);
+    text.setAttribute('class', mode);
+    text.textContent = 'mix-blend-mode: ' + mode + ';';
 
-//     svg.appendChild(text);
-//     flagment.appendChild(svg);
+    svg.appendChild(text);
+    flagment.appendChild(svg);
 
-//     style += '.' + mode + ' {mix-blend-mode: ' + mode + ';}';
-// }
+    style += '.' + mode + ' {mix-blend-mode: ' + mode + ';}';
+}
 
-// document.getElementById('insert').innerHTML = style;
-// document.body.appendChild(flagment);
+document.getElementById('insert').innerHTML = style;
+document.body.appendChild(flagment);
 </script>
 </html>
