Fix unquoted attributes in navigation refresh test
refreshPageStatic.html
refreshPageDynamic.html

--- a/webdriver/navigation/refreshPageDynamic.html
+++ b/webdriver/navigation/refreshPageDynamic.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<body id=body>
+<body id="body">
 This is a dynamic page. It will always have different content if refreshed.
-<div id=dynamic></div>
+<div id="dynamic"></div>
 </body>
 </html>
 <script>
