remove comments from source code

--- a/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background-ref.html
+++ b/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background-ref.html
@@ -2,11 +2,9 @@
 <html>
 <head>
     <title>CSS mix-blend-mode API Test</title>
-    <link rel="author" title="dmyang" href="mailto:yangdemo@address.com">
+    <link rel="author" title="dmyang" href="mailto:yangdemo@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/compositing-1/">
     <meta name="flags" content="dom">
-    <!-- <script src="../../resources/testharness.js"></script>
-    <script src="../../resources/testharnessreport.js"></script> -->
     <style type="text/css">
       .svg {
         background-color: #888;
@@ -57,6 +55,5 @@
     <svg class="svg">
         <text class="exclusion" x="10" y="20">mix-blend-mode: exclusion;</text>
     </svg>
-    <!-- <div id="log"></div>   -->
 </body>
 </html>
