--- a/contributors/ttwf_shenzhen/chemdemo/submitted/line-with-svg-background-ref.html
+++ b/contributors/ttwf_shenzhen/chemdemo/submitted/line-with-svg-background-ref.html
@@ -2,11 +2,9 @@
 <html>
 <head>
     <title>CSS mix-blend-mode API Test</title>
-    <link rel="author" title="dmyang" href="mailto:yangdemo@address.com">
+    <link rel="author" title="dmyang" href="mailto:yangdemo@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/compositing-1/">
     <meta name="flags" content="dom">
-    <!-- <script src="../../resources/testharness.js"></script>
-    <script src="../../resources/testharnessreport.js"></script> -->
     <style type="text/css">
       .svg {
         background-color: #888;
@@ -53,6 +51,5 @@
     <svg class="svg">
         <line class="exclusion" x1="10" y1="30" x2="300" y2="30" style="stroke:blue; stroke-width:20;" />
     </svg>
-    <!-- <div id="log"></div>   -->
 </body>
 </html>
