Fix for Test Web Report

--- a/html/semantics/forms/the-input-element/date.html
+++ b/html/semantics/forms/the-input-element/date.html
@@ -32,15 +32,15 @@
 		  "help" : "http://www.w3.org/html/wg/drafts/html/CR/forms.html#date-state-(type=date)" });
 
 		test(function() {
-          assert_equals(document.getElementById("valid").value, "2011-01-01");
-          assert_equals(document.getElementById("too_small_value").value, "2011-01-01");
-          assert_equals(document.getElementById("too_large_value").value, "2011-12-31");
+          assert_equals(document.getElementById("valid").value, "2011-11-01");
+          assert_equals(document.getElementById("too_small_value").value, "1999-01-31");
+          assert_equals(document.getElementById("too_large_value").value, "2099-01-31");
         },
         "The value attribute, if specified and not empty, must have a value that is a valid date string.");
 
 		test(function() {
           assert_equals(document.getElementById("valid").min, "2011-01-01"),
-          assert_equals(document.getElementById("invalid_min").min, "")
+          assert_equals(document.getElementById("invalid_min").min, "1999-1")
           },
         "The min attribute, if specified, must have a value that is a valid date string.");
 
