--- a/contributors/ttwf_shenzhen/css3-ui/YreenChan/text-overflow.html
+++ b/contributors/ttwf_shenzhen/css3-ui/YreenChan/text-overflow.html
@@ -5,7 +5,7 @@
     <link rel="reviewer" title="Simon Pieters" href="mailto:simonp@opera.com">
     <link rel="help" href="http://www.w3.org/TR/css3-ui/#text-overflow0" title="8.2. the 'text-overflow' property">
     <link rel="match" href="text-overflow-ref.html">
-    <meta name="flags" content="font">
+    <meta name="flags" content="font ahem">
     <meta name="assert" content="'text-overflow:ellipsis' renders U+2026 when text is overflowing.">
 	<style>
 	div {
