--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="flags" content="dom">
-    <meta name="assert" content="shape-outside declaration is invalid if ellipse shape function has two invalid arguments">
+    <meta name="assert" content="shape-outside declaration is invalid if ellipse shape function has only two invalid arguments">
     <title>CSS Shapes Test: Ellipse - invalid 2 arg</title>
     <link rel="author" title="Sherlock Zhong" href="mailto:sherlock.z0917@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
