--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-ellipse-002.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-ellipse-002.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="flags" content="dom">
     <meta name="assert" content="shape-outside declaration is invalid if ellipse function has one invalid argument">
-	<title>CSS Shapes Test - Ellipse - invalid 2 arg</title>
+	<title>CSS Shapes Test - Ellipse - invalid 1 arg</title>
 	<link rel="author" title="noonnightstorm" href="mailto:noonnightstorm@gmail.com">
 	<link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
 	<script src="/resources/testharness.js"></script>
@@ -15,7 +15,7 @@
 #shape{
 	width: 300px;
 	height: 300px;
-	shape-outside: ellipse(50, 50%, 50%, 50%);
+	shape-outside: ellipse(50px);
 }
 	</style>
 </head>
