corrected the function

--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
@@ -14,7 +14,7 @@
 #shape{
     width: 300px;
     height: 300px;
-    shape-outside: ellipse(-50, -50);
+    shape-outside: ellipse(50px, 50px);
 }
     </style>
 </head>
