--- a/html/semantics/scripting-1/the-script-element/script-text.html
+++ b/html/semantics/scripting-1/the-script-element/script-text.html
@@ -11,6 +11,7 @@ setup(function() {
   script = document.createElement("script")
   script.appendChild(document.createComment("COMMENT"))
   script.appendChild(document.createTextNode("  TEXT  "))
+  script.appendChild(document.createProcessingInstruction("P", "I"))
   script.appendChild(document.createElement("a"))
         .appendChild(document.createTextNode("ELEMENT"))
 })
@@ -33,4 +34,20 @@ test(function() {
   assert_equals(script.textContent, "")
   assert_equals(script.firstChild, null)
 }, "Setter (empty string)")
+test(function() {
+  script.text = null
+  assert_equals(script.text, "null")
+  assert_equals(script.textContent, "null")
+  assert_equals(script.firstChild.nodeType, Node.TEXT_NODE)
+  assert_equals(script.firstChild.data, "null")
+  assert_equals(script.firstChild, script.lastChild)
+}, "Setter (null)")
+test(function() {
+  script.text = undefined
+  assert_equals(script.text, "undefined")
+  assert_equals(script.textContent, "undefined")
+  assert_equals(script.firstChild.nodeType, Node.TEXT_NODE)
+  assert_equals(script.firstChild.data, "undefined")
+  assert_equals(script.firstChild, script.lastChild)
+}, "Setter (undefined)")
 </script>
