add cancelAnimationFrame test and fix bugs for other test

--- a/animation-timing/test_requestAnimationFrame_handle.html
+++ b/animation-timing/test_requestAnimationFrame_handle.html
@@ -9,6 +9,7 @@
 <script src="/resources/testharnessreport.js"></script>
 <link rel="stylesheet" href="/resources/testharness.css" />
 <script>
+(function(){
   setup({explicit_done: true});
 
   // avoid script errors
@@ -59,6 +60,7 @@
 
     done();
   }, 1000);
+}());
 </script>
 </head>
 <body>
