--- a/animation-timing/test_framerequestcallback_in_onesecond.html
+++ b/animation-timing/test_framerequestcallback_in_onesecond.html
@@ -9,6 +9,7 @@
 <script src="/resources/testharnessreport.js"></script>
 <link rel="stylesheet" href="/resources/testharness.css" />
 <script>
+(function(){
   setup({explicit_done: true});
 
   // avoid script errors
@@ -35,6 +36,7 @@
     }, msg);
     done();
   }, 1000);
+}());
 </script>
 </head>
 <body>
