--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-001.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-001.html
@@ -4,7 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.1. 'resize' property" href="http://www.w3.org/TR/css3-ui/#resize">
-<meta name="flags" content="">
+<meta name="flags" content="interact">
 <meta name="assert" content="Test checks that both width and height adjusted when resize set both.">
 <style>
   #test {
@@ -16,7 +16,6 @@
   }
 </style>
 <body>
-  <p>Test passes if both <strong>width</strong> and <strong>height</strong> of blue border square below can be adjusted by
-  dragging the <strong>bottom-right</strong> corner of the square.</p>
+  <p>Test passes if both <strong>width</strong> and <strong>height</strong> of blue border square below can be adjusted.</p>
   <div id="test"></div>
 </body>
