--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-003.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-003.html
@@ -4,7 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.1. 'resize' property" href="http://www.w3.org/TR/css3-ui/#resize">
-<meta name="flags" content="">
+<meta name="flags" content="interact">
 <meta name="assert" content="Test checks that the resize element inherits parent element">
 <style>
   #parent {
@@ -15,7 +15,7 @@
     width: 150px;
   }
   #child {
-    border: 2px solid blue;
+    border: 2px solid green;
     height: 75px;
     overflow: auto;
     resize: inherit;
@@ -23,8 +23,7 @@
   }
 </style>
 <body>
-  <p>Test passes if both the height and the width of the <strong>small</strong> blue border square can be adjusted by
-  dragging the <strong>bottom-right</strong> corner of the small square.</p>
+  <p>Test passes if both the height and width of the <strong>green</strong> border square inside blue square can be adjusted.</p>
   <div id="parent">
     <div id="child"></div>
   </div>
