--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-005.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-005.html
@@ -4,7 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.1. 'resize' property" href="http://www.w3.org/TR/css3-ui/#resize">
-<meta name="flags" content="">
+<meta name="flags" content="interact">
 <meta name="assert" content="Test checks that neither the width nor the height can be adjusted when resize set none">
 <style>
   #test {
@@ -16,7 +16,6 @@
   }
 </style>
 <body>
-  <p>Test passes if neither the height nor the width of the blue border square can be adjusted by
-  dragging the <strong>bottom-right</strong> corner of the small square.</p>
+  <p>Test passes if <strong>neither</strong> the height <strong>nor</strong> the width of the blue border square can be adjusted.</p>
   <div id="test"></div>
 </body>
