--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
@@ -6,7 +6,8 @@
     <meta name="assert" content="shape-outside declaration is invalid if shape is invalid">
 	<title>CSS Shapes Test - shape-outside invalid shape</title>
 	<link rel="author" title="noonnightstorm" href="mailto:noonnightstorm@gmail.com">
-	<link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
+	<link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com">
+	<link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
 	<script src="/resources/testharness.js"></script>
 	<script src="/resources/testharnessreport.js"></script>
 	<link rel="stylesheet" href="/resources/testharness.css">
