Add my reviewer links

--- a/contributors/ttwf_shenzhen/intel/css3-ui/box-sizing-002.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/box-sizing-002.html
@@ -3,6 +3,7 @@
 <title>CSS Basic User Interface Test: box-sizing - content-box (basic)</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
+<link rel="reviewer" title="Leif Arne Storset" href="mailto:lstorset@opera.com">
 <link rel="help" title="6.1. 'box-sizing' property" href="http://www.w3.org/TR/css3-ui/#box-sizing">
 <link rel="match" href="reference/ref-filled-green-100px-square.xht">
 <meta name="flags" content="">
