--- a/contributors/ttwf_shenzhen/css3-ui/YreenChan/text-overflow.html
+++ b/contributors/ttwf_shenzhen/css3-ui/YreenChan/text-overflow.html
@@ -3,6 +3,7 @@
 	<title>CSS Basic User Interface Test: text-overflow - ellipsis</title>
     <link rel="author" title="YreenChan" href="mailto:yreenchan@gmail.com">
     <link rel="reviewer" title="Simon Pieters" href="mailto:simonp@opera.com">
+    <link rel="reviewer" title="Leif Arne Storset" href="mailto:lstorset@opera.com">
     <link rel="help" href="http://www.w3.org/TR/css3-ui/#text-overflow0" title="8.2. the 'text-overflow' property">
     <link rel="match" href="text-overflow-ref.html">
     <meta name="flags" content="font ahem">
