--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
@@ -6,7 +6,8 @@
     <meta name="assert" content="shape-outside declaration is invalid if ellipse shape function has only two invalid arguments">
     <title>CSS Shapes Test: Ellipse - invalid 2 arg</title>
     <link rel="author" title="Sherlock Zhong" href="mailto:sherlock.z0917@gmail.com">
-    <link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
+    <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 11-09-2013 TestTWF Shenzhen -->
+    <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css">
