--- a/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background-ref.html
+++ b/contributors/ttwf_shenzhen/chemdemo/submitted/text-with-svg-background-ref.html
@@ -3,8 +3,8 @@
 <head>
     <title>CSS mix-blend-mode API Test</title>
     <link rel="author" title="dmyang" href="mailto:yangdemo@gmail.com">
-    <link rel="help" href="http://www.w3.org/TR/compositing-1/">
-    <meta name="flags" content="dom">
+    <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com"><!-- 11-09-2013 @TestTWF Shenzhen -->
+    <meta name="flags" content="svg">
     <style type="text/css">
       .svg {
         background-color: #888;
