--- a/contributors/ttwf_shenzhen/chemdemo/submitted/line-with-svg-background.html
+++ b/contributors/ttwf_shenzhen/chemdemo/submitted/line-with-svg-background.html
@@ -4,7 +4,7 @@
     <title>CSS mix-blend-mode API Test</title>
     <link rel="author" title="dmyang" href="mailto:yangdemo@gmail.com">
     <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com"><!-- 11-09-2013 @TestTWF Shenzhen -->
-    <link rel="help" href="http://www.w3.org/TR/compositing-1/#mix-blend-mode/">
+    <link rel="help" href="http://www.w3.org/TR/compositing-1/#mix-blend-mode">
     <meta name="flags" content="svg">
     <style type="text/css">
       .svg {
