fixed spec links

--- a/contributors/ttwf_shenzhen/css-shapes/biqing/submitted/shape-outside-invalid-circle-000.html
+++ b/contributors/ttwf_shenzhen/css-shapes/biqing/submitted/shape-outside-invalid-circle-000.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>CSS Shapes Tests: Circle - invalid 1 arg</title>
     <link rel="author" title="biqing" href="biqing.kwok@qq.com">
-    <link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
+    <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css">
