--- a/contributors/ttwf_shenzhen/jacketli/submitted/test-mask-ref.html
+++ b/contributors/ttwf_shenzhen/jacketli/submitted/test-mask-ref.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>CSS Masking: mask-repeat:round repeat;</title>
-<link rel="jacketli" title="Li Jun" href="mailto:64835173@qq.com">
+<link rel="author" title="Li Jun" href="mailto:64835173@qq.com">
+<link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com"><!-- 11-09-2013 @TestTWF Shenzhen -->
 
 <body>
     <p>Test passes if there is a blue square and no red.</p>
