--- a/contributors/ttwf_shenzhen/jacketli/submitted/test-mask.html
+++ b/contributors/ttwf_shenzhen/jacketli/submitted/test-mask.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>CSS Masking: mask-repeat:round repeat;</title>
-<link rel="jacketli" title="Li Jun" href="mailto:64835173@qq.com">
+<link rel="author" title="Li Jun" href="mailto:64835173@qq.com">
+<link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com"><!-- 11-09-2013 @TestTWF Shenzhen -->
 <link rel="help" href="http://www.w3.org/TR/css-masking/#the-mask-repeat">
 <link rel="match" href="test-mask-ref.html">
 <meta name="assert" content="Test checks that the mask-repeart value "round" is working properly: it should scale to fit the whole area.">
@@ -22,7 +23,4 @@
     <div style="width: 200px; height:200px; position: fixed; background-color:red;"></div>
 	<div class="test"></div> 
 </body>
-
-
-
 </html>
