--- a/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-003.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-003.html
@@ -4,6 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.2. Overflow Ellipsis: the 'text-overflow' property" href="http://www.w3.org/TR/css3-ui/#text-overflow">
+<link rel="match" href="reference/text-overflow-001-ref.html">
 <meta name="flags" content="">
 <meta name="assert" content="Test checks that text-overflow inherits the parent' clip value when text-overflow set inherit">
 <style>
@@ -11,18 +12,23 @@
     text-overflow: clip;
   }
   #test {
-    border: 2px solid;
+    height: 40px;
     font-size: 20px;
-    height: 20px;
+    height: 40px;
     overflow: hidden;
     text-overflow: inherit;
-    width: 150px;
+    width: 200px;
+  }
+  span {
+    font-family: Ahem;
+    font-size: 30px;
   }
 </style>
 <body>
-  <p>Test passes if there are only there words <strong>Test checks the</strong> inside the black frame below and <strong>no</strong>
-  other characters outside.</p>
+  <p>Test passes if there are only three words <strong>Test checks the</strong> below.</p>
   <div id="container">
-    <div id="test">Test checks the content broken if the content overflows the container</div>
+    <div id="test">
+      <span>Test checks the content broken if the content overflows the container</span>
+    </div>
   </div>
 </body>
