--- a/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-004.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-004.html
@@ -4,6 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.2. Overflow Ellipsis: the 'text-overflow' property" href="http://www.w3.org/TR/css3-ui/#text-overflow">
+<link rel="match" href="reference/text-overflow-002-ref.html">
 <meta name="flags" content="">
 <meta name="assert" content="Test checks that text-overflow inherits the parent' ellipsis value when text-overflow set inherit">
 <style>
@@ -11,18 +12,23 @@
     text-overflow: ellipsis;
   }
   #test {
-    border: 2px solid;
     font-size: 20px;
-    height: 20px;
+    height: 40px;
     overflow: hidden;
     text-overflow: inherit;
-    width: 132px;
+    width: 170px;
+  }
+  span {
+    font-family: Ahem;
+    font-size: 30px;
   }
 </style>
 <body>
-  <p>Test passes if there are characters <strong>TestChecksT...</strong> inside the black frame and <strong>no</strong>
-  other characters outside.</p>
+  <p>PREREQUISITE: The font used must have a glyph for the U+2026 character.</p>
+  <p>Test passes if there is <strong>ellipsis</strong> after characters <strong>TestChecks</strong> below.</p>
   <div id="container">
-    <div id="test">TestChecksThatTheEllipsIsInsteadOfTheBrokenInlineContent</div>
+    <div id="test">
+      <span>TestChecksThatTheBrokenContentRepalcedByEllipsis</span>
+    </div>
   </div>
 </body>
