--- a/html/semantics/forms/constraints/form-validation-validity-patternMismatch.html
+++ b/html/semantics/forms/constraints/form-validation-validity-patternMismatch.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8">
 <title>The constraint validation API Test: element.validity.patternMismatch</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
-<link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/forms.html#dom-validitystate-patternmismatch">
-<link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/forms.html#the-constraint-validation-api">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/forms.html#dom-validitystate-patternmismatch">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/forms.html#the-constraint-validation-api">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="support/validator.js"></script>
@@ -15,52 +15,14 @@
       tag: "input",
       types: ["text", "search", "tel", "url", "email", "password"],
       testData: [
-        {pattern: null, value: "abc", expected: false, name: "The pattern attribute is not set"},
-        {pattern: "[A-Z]+", value: "", expected: false, name: "The value attibute is empty string"},
-        {pattern: "[A-Z]{1}", value: "A", expected: false, name: "The value attribute matches the pattern attribute"},
-        {pattern: "[A-Z]+", value: "\u0041\u0042\u0043", expected: false, name: "The value(ABC) in unicode attribute matches the pattern attribute"},
-        {pattern: "[a-z]{3,}", value: "ABCD", expected: true, name: "The value attribute mismatches the pattern attribute"}
+        {conditions: {pattern: null, value: "abc"}, expected: false, name: "[target] The pattern attribute is not set"},
+        {conditions: {pattern: "[A-Z]+", value: ""}, expected: false, name: "[target] The value attibute is empty string"},
+        {conditions: {pattern: "[A-Z]{1}", value: "A"}, expected: false, name: "[target] The value attribute matches the pattern attribute"},
+        {conditions: {pattern: "[A-Z]+", value: "\u0041\u0042\u0043"}, expected: false, name: "[target] The value(ABC) in unicode attribute matches the pattern attribute"},
+        {conditions: {pattern: "[a-z]{3,}", value: "ABCD"}, expected: true, name: "[target] The value attribute mismatches the pattern attribute"}
       ]
     }
   ];
 
-  for (var i = 0; i < testElements.length; i++) {
-    var ele = document.createElement(testElements[i].tag);
-    if (testElements[i].types.length > 0) {
-      for (var typ in testElements[i].types) {
-        try {
-          ele.type = testElements[i].types[typ];
-        } catch (e) {}
-
-        if (ele.type != testElements[i].types[typ]) {
-          validator.test_support_type(
-            ele,
-            testElements[i].types[typ],
-            "The " + testElements[i].types[typ] + " type of " + ele.tagName.toUpperCase() + " element must be suppoorted."
-          );
-          continue;
-        }
-
-        for (var item in testElements[i].testData) {
-          validator.test_patternMismatch(
-            ele,
-            testElements[i].testData[item].pattern,
-            testElements[i].testData[item].value,
-            testElements[i].testData[item].expected,
-            "[" + testElements[i].tag.toUpperCase() + " in " + testElements[i].types[typ].toUpperCase() + " status]: " + testElements[i].testData[item].name
-          );
-        }
-      }
-    } else {
-      for (var item in testElements[i].testData) {
-        validator.test_patternMismatch(
-          ele,
-          testElements[i].testData[item].pattern,
-          testElements[i].testData[item].value,
-          testElements[i].testData[item].expected,
-          "[" + testElements[i].tag + "] " + testElements[i].testData[item].name
-        );
-      }
-    }
-  }
+  validator.run_test (testElements, "patternMismatch");
 </script>
