--- a/html/semantics/forms/constraints/form-validation-validity-tooLong.html
+++ b/html/semantics/forms/constraints/form-validation-validity-tooLong.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8">
 <title>The constraint validation API Test: element.validity.tooLong</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
-<link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/forms.html#dom-validitystate-toolong">
-<link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/forms.html#the-constraint-validation-api">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/forms.html#dom-validitystate-toolong">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/forms.html#the-constraint-validation-api">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="support/validator.js"></script>
@@ -15,78 +15,35 @@
       tag: "input",
       types: ["text", "search", "tel", "url", "email", "password"],
       testData: [ // Non-dirty value
-        {maxLength: "", value: "abc", expected: false, name: "Non-dirty value - maxlength is not set"},
-        {maxLength: "4", value: "", expected: false, name: "Non-dirty value - value is empty string"},
-        {maxLength: "4", value: "abc", expected: false, name: "Non-dirty value - length of value is less than maxlength"},
-        {maxLength: "4", value: "abcd", expected: false, name: "Non-dirty value - length of value equals to maxlength"},
-        {maxLength: "4", value: "abcde", expected: false, name: "Non-dirty value - length of value is greater than maxlength"},
+        {conditions: {maxLength: "", value: "abc"}, expected: false, name: "[target] Non-dirty value - maxlength is not set"},
+        {conditions: {maxLength: "4", value: ""}, expected: false, name: "[target] Non-dirty value - value is empty string"},
+        {conditions: {maxLength: "4", value: "abc"}, expected: false, name: "[target] Non-dirty value - length of value is less than maxlength"},
+        {conditions: {maxLength: "4", value: "abcd"}, expected: false, name: "[target] Non-dirty value - length of value equals to maxlength"},
+        {conditions: {maxLength: "4", value: "abcde"}, expected: false, name: "[target] Non-dirty value - length of value is greater than maxlength"},
         //Dirty value
-        {maxLength: "4", value: "abc", expected: false, name: "Dirty value - value is less than maxlength", dirty: true},
-        {maxLength: "4", value: "\u0041\u0041\u0041", expected: false, name: "Dirty value - length of value(AAA) in unicode is less than maxlength", dirty: true},
-        {maxLength: "4", value: "abcd", expected: false, name: "Dirty value - value equals to maxlength", dirty: true},
-        {maxLength: "4", value: "abcde", expected: true, name: "Dirty value - length of value is greater than maxlength", dirty: true}
+        {conditions: {maxLength: "4", value: "abc"}, expected: false, name: "[target] Dirty value - value is less than maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "\u0041\u0041\u0041"}, expected: false, name: "[target] Dirty value - length of value(AAA) in unicode is less than maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "abcd"}, expected: false, name: "[target] Dirty value - value equals to maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "abcde"}, expected: true, name: "[target] Dirty value - length of value is greater than maxlength", dirty: true}
       ]
     },
     {
       tag: "textarea",
       types: [],
       testData: [
-        {maxLength: "", value: "abc", expected: false, name: "Non-dirty value - maxlength is no set"},
-        {maxLength: "4", value: "", expected: false, name: "Non-dirty value - value is empty string"},
-        {maxLength: "4", value: "abc", expected: false, name: "Non-dirty value - length of value is less than maxlength"},
-        {maxLength: "4", value: "abcd", expected: false, name: "Non-dirty value - length of value equals to maxlength"},
-        {maxLength: "4", value: "abcde", expected: false, name: "Non-dirty value - length of length of value is greater than maxlength"},
+        {conditions: {maxLength: "", value: "abc"}, expected: false, name: "[target] Non-dirty value - maxlength is no set"},
+        {conditions: {maxLength: "4", value: ""}, expected: false, name: "[target] Non-dirty value - value is empty string"},
+        {conditions: {maxLength: "4", value: "abc"}, expected: false, name: "[target] Non-dirty value - length of value is less than maxlength"},
+        {conditions: {maxLength: "4", value: "abcd"}, expected: false, name: "[target] Non-dirty value - length of value equals to maxlength"},
+        {conditions: {maxLength: "4", value: "abcde"}, expected: false, name: "[target] Non-dirty value - length of length of value is greater than maxlength"},
         //Dirty value
-        {maxLength: "4", value: "abc", expected: false, name: "Dirty value - value is less than maxlength", dirty: true},
-        {maxLength: "4", value: "\u000D\u000A", expected: false, name: "Dirty value - length of value(LF, CRLF) in unicode is less than maxlength", dirty: true},
-        {maxLength: "4", value: "abcd", expected: false, name: "Dirty value - length of value equals to maxlength", dirty: true},
-        {maxLength: "4", value: "abcde", expected: true, name: "Dirty value - length of value is greater than maxlength", dirty: true}
+        {conditions: {maxLength: "4", value: "abc"}, expected: false, name: "[target] Dirty value - value is less than maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "\u000D\u000A"}, expected: false, name: "[target] Dirty value - length of value(LF, CRLF) in unicode is less than maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "abcd"}, expected: false, name: "[target] Dirty value - length of value equals to maxlength", dirty: true},
+        {conditions: {maxLength: "4", value: "abcde"}, expected: true, name: "[target] Dirty value - length of value is greater than maxlength", dirty: true}
       ]
     }
   ];
 
-  for (var i = 0; i < testElements.length; i++) {
-    var ele = document.createElement(testElements[i].tag);
-    document.forms.fm.appendChild(ele);
-    if (testElements[i].types.length > 0) {
-      for (var typ in testElements[i].types) {
-        try {
-          ele.type = testElements[i].types[typ];
-        } catch (e) {
-          //do nothing, avoid the runtime error to break the test
-        }
-
-        if (ele.type != testElements[i].types[typ]) {
-          validator.test_support_type(
-            ele,
-            testElements[i].types[typ],
-            "The " + testElements[i].types[typ] + " type of " + ele.tagName.toUpperCase() + " element must be suppoorted"
-          );
-          continue;
-        }
-
-        for (var item in testElements[i].testData) {
-          validator.test_tooLong( 
-            ele,
-            testElements[i].testData[item].maxLength,
-            testElements[i].testData[item].value,
-            testElements[i].testData[item].expected,
-            "[" + testElements[i].tag.toUpperCase() + " in " + testElements[i].types[typ].toUpperCase() + " status]: " + testElements[i].testData[item].name,
-            testElements[i].testData[item].dirty
-          );
-        }
-      }
-    } else {
-      for (var item in testElements[i].testData) {
-        validator.test_tooLong( 
-          ele,
-          testElements[i].testData[item].maxLength,
-          testElements[i].testData[item].value,
-          testElements[i].testData[item].expected,
-          "[" + testElements[i].tag + "] " + testElements[i].testData[item].name,
-          testElements[i].testData[item].dirty
-        );
-      }
-    }
-  }
+  validator.run_test (testElements, "tooLong");
 </script>
