Update the VTTCue test names

--- a/old-tests/submission/Opera/media/interfaces/VTTCue/align.html
+++ b/old-tests/submission/Opera/media/interfaces/VTTCue/align.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>TextTrackCue.align</title>
+<title>VTTCue.align</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <div id=log></div>
