--- a/old-tests/submission/Opera/media/interfaces/VTTCue/getCueAsHTML.html
+++ b/old-tests/submission/Opera/media/interfaces/VTTCue/getCueAsHTML.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>TextTrackCue.getCueAsHTML()</title>
+<title>VTTCue.getCueAsHTML()</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <div id=log></div>
