--- a/old-tests/submission/Opera/media/interfaces/VTTCue/snapToLines.html
+++ b/old-tests/submission/Opera/media/interfaces/VTTCue/snapToLines.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>TextTrackCue.snapToLines</title>
+<title>VTTCue.snapToLines</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <div id=log></div>
