--- a/old-tests/submission/Opera/media/interfaces/VTTCue/text.html
+++ b/old-tests/submission/Opera/media/interfaces/VTTCue/text.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>TextTrackCue.text</title>
+<title>VTTCue.text</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <div id=log></div>
