--- a/old-tests/submission/Opera/media/interfaces/VTTCue/vertical.html
+++ b/old-tests/submission/Opera/media/interfaces/VTTCue/vertical.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>TextTrackCue.vertical</title>
+<title>VTTCue.vertical</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <div id=log></div>
